<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Robots4Droid</string>
	<!-- MainActivity -->
	<string name="continue_button">Continue</string>
	<string name="new_game_button">New game</string>
	<string name="load_button">Load</string>
	<string name="scores_button">Scores</string>
	<string name="settings_button">Settings</string>
	<string name="about_button">About</string>
	<string name="dialog_about_message">
What to do.\n\
All you need is to destroy all the robots and go to the next level. The  higher level you have achieved the much more robots want to kill you. The more robots you are surrounded the more interesting game is. It means you will gain more scores and have more achievement.\n\
\n\
How to reach it.\n\
We worked hard to make game interesting and attractive to you. We also added  teleport, safe teleport, traps and bombs to the game process. If you use it all carefully, you will learn fast how to play and easily will become one of the best players ever.\n\
\n\
Details.\n\
We believe we did the game clear to understand, so you can skip this part and start playing right now. But remember that knowing all the rules was never harmful to anyone.\n\
Teleport - the easiest way to travel, by the way. But we need to warn you that once it may move you to the robot\'s action zone. It means you will die there with no chance to revive screaming \"OH GOD WHYYY\"\n\
Safe teleport - moving that costs 1 point of energy. Good thing. Useful thing. It will place you onto the point where no robots can reach you right now. But there are no reasons to think robots won\'t kill you next turn.\n\
Traps - just drop this thing on the cell and make the robot touch it. Then say goodbye to robot by paying 3 points of energy.\n\
Bombs - a very large boom around you that costs some points of energy depending on count of enemies around, see the number next to the bomb pictogram.\n\
\n\
Anything else?\n\
When robots collide, they crush making a heap. Heaps are rather useful. Push it on robot and robot will be lost in the heap. Another way of playing - staying besides the heap and attracting robots to crush into the dumb by your body.\n\
\n\
Where to go?\n\
Anywhere you want. Or just stay on the cell. It\'s your game and your life so we can\'t rule you.\n\
\n\
Settings\n\
Sound\/ silence - simple and good preference, isn\'t it?\n\
Safe\/ unsafe mode - if you like to risk, you must know that the unsafe mode was created especially for you. But sometimes every of us wants to be protected by mystic power, that will help you not to mistake. Thanks to us, you may try this. Playing save mode you can\'t touch robots as we do in museums and zoos.\n\
\n\
Difficulty - sometimes it\'s really hard to choose whether you need difficulties in your life or not. If you really need it, try to play with fast robots.\n\
\n\
WARNING!!! The game is rather endless. There is no victory. But there is an opportunity to improve your self-estimate by becoming the best player ever!\n\
	</string>
	<!-- GameActivity -->
	<string name="dialog">Oooops… it looks like you died</string>
	<string name="restart">Once more!</string>
	<string name="away">Give me a break…</string>
	<string name="add_score">I wanna go down in history!</string>
	<string name="score_info">You\'ve managed to gain %d points.</string>
	<string name="no_saved">You have nothing to continue!</string>
	<string name="not_possible">Hey, it\'s not your way!</string>
	<string name="new_level">NEW LEVEL: %d</string>
	<string name="level">Level: %d</string>
	<string name="input_name">And who is such a cool?</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="nil">0</string>
	<string name="one">1</string>
	
	<!-- SettingsActivity -->
	<string name="music_setting">Music</string>
	<string name="suicide_setting">Turn safe movements on</string>
	<string name="suicide_summary">Reject suicide movements</string>
	<string name="complexity_setting">Difficulty</string>
	<string name="mine_setting">Turn mines on</string>
	<string name="mine_summary">Ability to create booby traps</string>
	<string name="bomb_setting">Turn explosions on</string>
	<string name="bomb_summary">Ability to blow up nearby enemies</string>
	<string name="cast_error_msg">Board metrics must be integers</string>
	<string name="val_error_msg">Board metrics must belong to range from 15 to 80</string>
	<string name="fix_error_msg">Correct your settings</string>
	<string name="edit_width_msg">Set a board width in cells</string>
	<string name="edit_height_msg">Set a board height in cells</string>
	<string name="width_setting">Board width</string>
	<string name="height_setting">Board height</string>
	<string name="shortage_mode">Energy shortage</string>
	<string name="shortage_mode_summary">Energy is only given at the beginning of the game</string>
	<string name="error">ERROR</string>
	<string name="game_mode_setting">Game mode</string>
	<string name="game_mode_summary">Setup complexity and extra features</string>
	<string name="vamp_mode_setting">Energy bonuses</string>
	<string name="vamp_mode_summary">You get energy when you kill enemy with pushing a junk</string>
	<string name="lsd_setting">Young chemist mode</string>
	<string name="lsd_summary">You take full responsibitity for aftereffects…</string>
	<string name="lsd_anim_setting">Associated animation</string>
	<string name="skin">Аppearance</string>
	<string name="metrics">Board size</string>
	<string name="gen_settings">General settings</string>
	
	<!-- LoadActivity -->
	<string name="delete">\n\ Out of sight, out of mind?</string>
	<string name="yes">Yes</string>
	<string name="no">NO</string>

	<!-- SavedGame -->
	<string name="score">Score: %d</string>
	
	<!-- ScoreActivity -->
	<string name="delete_scores">Delete scores</string>
</resources>