<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent" >
	<CheckBox
		android:id="@+id/musicBox"
		style="@style/SettingsItem"
		android:text="@string/music_setting"
		android:longClickable="false"
		android:enabled="true" 
		android:checked="false" />
	
	<CheckBox
		android:id="@+id/suicideBox"
		style="@style/SettingsItem"
		android:text="@string/suicide_setting" />
	
	<CheckBox
		android:id="@+id/mineBox"
		style="@style/SettingsItem"
		android:text="@string/mine_setting" />
	
	<CheckBox
		android:id="@+id/bombBox"
		style="@style/SettingsItem"
		android:text="@string/bomb_setting" />

	<CheckBox
		android:id="@+id/lsdBox"
		style="@style/SettingsItem"
		android:text="@string/lsd_setting" />

	<TextView
		android:id="@+id/complexity_textView"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/complexity_setting" />

	<RadioGroup
		android:id="@+id/complexityGroup"
		style="@style/SettingsItem"
		android:layout_weight="2">
		
		<RadioButton
			android:id="@+id/normalRadio"
			style="@style/SettingsItem"
			android:text="@string/easy_setting" />
		
		<RadioButton
			android:id="@+id/extraRadio"
			style="@style/SettingsItem"
			android:text="@string/hard_setting" />
	</RadioGroup>
</LinearLayout>
	