<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/defeat_linearLayout"
	android:background="#90000000"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center"
	android:visibility="gone">

	<TextView
		android:text="@string/dialog"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:textSize="40sp"
		android:textColor="@android:color/background_light"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center">

		<Button
			android:id="@+id/restart_button"
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:text="@string/restart"
			android:background="#70000000"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"/>
		<Button
			android:id="@+id/away_button"
			android:layout_height="wrap_content"
			android:layout_width="0dip"
			android:layout_weight="1"
			android:text="@string/away"
			android:background="#70000000"
			android:layout_marginRight="5dp"
			android:layout_marginLeft="5dp"/>
	</LinearLayout>
	<TextView
	    android:id="@+id/score_info_textView"
		android:text="@string/score_info"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:layout_marginTop="30dp"
		android:textColor="@android:color/background_light"/>
	<Button
		android:id="@+id/add_score_button"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/add_score"
		android:background="#70000000"/>
</LinearLayout>