<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#c7fed8">

    <Button android:id="@+id/continue_button"
     		android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:text="@string/continue_button" 
        	android:layout_gravity="center_horizontal"
        	android:background="#ffffff"
        	android:textColor="#000000"
        	android:layout_marginTop="10dp"/>
    
    <Button android:id="@+id/new_game_button"
     		android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:text="@string/new_game_button" 
        	android:layout_gravity="center_horizontal"
        	android:background="#ffffff"
        	android:textColor="#000000"
        	android:layout_marginTop="10dp"/>
    
	<Button android:id="@+id/load_button"
     		android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:text="@string/load_button" 
        	android:layout_gravity="center_horizontal"
        	android:background="#ffffff"
        	android:textColor="#000000"
        	android:layout_marginTop="10dp"/>

    <Button android:id="@+id/settings_button"
     		android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:text="@string/settings_button" 
        	android:layout_gravity="center_horizontal"
        	android:background="#ffffff"
        	android:textColor="#000000"
        	android:layout_marginTop="10dp"/>
    
    <Button android:id="@+id/about_button"
     		android:layout_width="150dp"
        	android:layout_height="40dp"
        	android:text="@string/about_button" 
        	android:layout_gravity="center_horizontal"
        	android:background="#ffffff"
        	android:textColor="#000000"
        	android:layout_marginTop="10dp"/>
    
</LinearLayout>